--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <h1 class="title is-1">Hi there, I'm <span class="has-text-primary">Rhys</span> 👋</h1>
         <h4 class="subtitle is-4">
-          I'm software engineer, creating solutions to make users' lives easier.
+          I'm a software engineer, creating solutions to make users' lives easier.
         </h4>
         <p class="block">
           I have been developing professional software for
