--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <h1 class="title is-1">Hi there, I'm <span class="has-text-primary">Rhys</span> 👋</h1>
         <h4 class="subtitle is-4">
-          I'm a software engineer, creating solutions to make users' lives easier.
+          I'm a senior software engineer, creating solutions to make users' lives easier.
         </h4>
         <p class="block">
           I have been developing professional software for
@@ -57,9 +57,7 @@
           hacking together small scripts and fun programs.
           I am passionate about <b>Open Source Software</b>, <b>Python</b>, <b>CI & CD</b>, and <b>sharing knowledge
             with others</b>.
-          I currently work with <b>Python</b> and <b>TypeScript</b>, alongside <b>Django</b> and <b>React</b>, to create
-          responsive customer facing
-          web frontends and backend services for financial services.
+          I currently work with <b>Django</b> on backend services for the renewable energy sector.
           In my spare time I am currently learning <b>Golang</b>.
         </p>
         <p class="block">
