--- a/index.html
+++ b/index.html
@@ -53,14 +53,10 @@
                 <p class="block">
                     I have been developing professional software for
                     <script>document.write(new Date().getFullYear() - 2015)</script> years in agile scrum teams, and
-                    spent a
-                    lifetime before that
-                    hacking together small scripts and fun programs.
-                    I am passionate about <b>Open Source Software</b>, <b>Python</b>, <b>CI & CD</b>, and <b>sharing
-                        knowledge
-                        with others</b>.
-                    I currently work with <b>Django</b> on backend services for the renewable energy sector.
-                    In my spare time I am currently learning <b>Golang</b>.
+                    spent a lifetime before that hacking together small scripts and fun programs.
+                    I am passionate about <b>Open Source Software</b>, <b>Python</b>, <b>CI & CD</b>, and
+                    <b>sharing knowledge with others</b>. I currently work with <b>Django</b> on backend services for
+                    the renewable energy sector. In my spare time I am currently learning <b>Golang</b>.
                 </p>
                 <p class="block">
                     Looking to get in contact?
